# disk_usage

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app_state.rs  main.rs  startup.rs
ui/: disk-item.slint  items-list.slint  size-item-struct.slint  style.slint
