[package]
name = "disk_usage"
version = "0.1.0"
edition = "2021"

[dependencies.slint]
version = "1.0.1"
default-features = false
features = [
    "compat-1-0",
    "renderer-winit-skia-opengl"
]

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation"
]
